# claw-code

./: .claw.json  .claw.json.bad  .clawd-task-graph.json  .clawd-todos.json  .env  .env.example  .gitignore  .test.json  CLAW.md  CONTRIBUTING.md  IMPROVED_TASK_PLANNING.md  MAJOR_ISSUES_ANALYSIS.md  MCP_INTEGRATION_ANALYSIS.md  MCP_INTEGRATION_FINAL_REPORT.md  MCP_INTEGRATION_VERIFICATION.md  MCP_SERVER_TEST_RESULTS.md  MCP_TESTING_REPORT.md  PARITY.md  PHILOSOPHY.md  PLAN.md  README.md  REFACTORING_PROGRESS.md  ROADMAP.md  SYSTEM_ANALYSIS_AND_ARCHITECTURE.md  SYSTEM_ARCHITECTURE_DIAGRAMS.md  TEST_RESULTS_AND_IMPROVEMENTS.md  USAGE.md  build_release.sh  check_usb.py  get_blocks.py  get_blocks2.py  instal.txt  install.sh  models.txt  move_blocks.py  patch.diff  patch_main.py  patch_validate.py  run_claw.sh  run_claw_new_session.sh  (+29 more)
rust/: Cargo.toml  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  find_temp  find_temp.rs
rust/crates/api/src/: bin_test_timeout.rs  client.rs  error.rs  http_client.rs  lib.rs  types.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs
rust/crates/claw-analog/: Cargo.toml
rust/crates/claw-analog/src/: lib.rs  main.rs
rust/crates/claw-rag-service/: Cargo.toml
rust/crates/claw-rag-service/src/: chunk.rs  ingest.rs  lib.rs  main.rs
rust/crates/commands/src/: lib.rs
rust/crates/logger/: Cargo.toml
rust/crates/logger/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/plugins/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  compact.rs  config.rs  config_validate.rs  context_budget.rs  conversation.rs  file_ops.rs  file_tree.rs  hooks.rs  lane_events.rs  lib.rs  loop_detection.rs  mcp_stdio.rs  mcp_tool_bridge.rs  middleware.rs  policy_engine.rs  prompt.rs  recovery_recipes.rs  session.rs  session_control.rs  task_packet.rs  test_middleware2  test_middleware3  test_middleware4.rs  test_middleware5.rs  test_middleware6  test_middleware6.rs  tool_dispatch.rs  trident.rs  worker_boot.rs  workspace.rs
rust/crates/runtime/tests/: integration_tests.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: cli.rs  config.rs  doctor.rs  env.rs  error.rs  export.rs  git.rs  help.rs  init.rs  live_core.rs  main.rs  main.rs.orig  main.rs.rej  mcp.rs  output.rs  plugin.rs  render.rs  repl.rs  session.rs  session_orchestrator.rs  setup.rs  setup_wizard.rs  status.rs  tool_executor.rs  utils.rs  validation.rs
rust/crates/rusty-claude-cli/tests/: compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
(+181 files in other folders)
