[workspace]
members = ["crates/*", "test_timeout"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing-log"] }
tracing-appender = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
